--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 
       <footer class="site-footer">
        
-        <span class="site-footer-credits">任务管理器</span>
+        <span class="site-footer-credits">Deepin Club provided by <a href=https://space.bilibili.com/1641461034>DEEPIN_BSOD2_CMD</a></span>
       </footer>
     </main>
   </body>
