--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -108,8 +108,8 @@ a {
 .page-header {
   color: $header-heading-color;
   text-align: center;
-  background-color: $header-bg-color;
-  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+  background-color: rgba(232,0,0,100);
+  background-image: linear-gradient(120deg, rgba(232,0,0,100)-secondary, rgba(232,0,0,100));
 
   @include large {
     padding: 5rem 6rem;
