--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -109,7 +109,7 @@ a {
   color: $header-heading-color;
   text-align: center;
   background-color: rgba(232,0,0,100);
-  background-image: linear-gradient(120deg, rgba(232,0,0,100)-secondary, rgba(232,0,0,100));
+  background-image: linear-gradient(120deg, rgba(255,5,255,100), rgba(232,0,0,100));
 
   @include large {
     padding: 5rem 6rem;
