--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -109,7 +109,7 @@ a {
   color: $header-heading-color;
   text-align: center;
   background-color: rgba(5,255,251,100);
-  background-image: linear-gradient(120deg, rgba(5,255,251,100), rgba(0,103,232,100));
+  background-image: linear-gradient(120deg, #ff0000, #8d2b6b));
 
   @include large {
     padding: 5rem 6rem;
